ingress/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - path: /login
        pathType: Exact
        backend:
          service:
            name: prometheus-grafana 
            port:
              number: 80  
      - path: /query
        pathType: Exact
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus  
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /products
        pathType: Exact
        backend:
          service:
            name: go-api-service
            port:
              number: 8080
